--- a/core java volume 1/.recommenders/caches/identified-project-coordinates.json
+++ b/core java volume 1/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-{}
+[[{"location":"C:\\Program Files\\Java\\jre1.8.0_131","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.8"}},"jre:jre:1.8.0"],[{"location":"C:\\Users\\Himory\\Desktop\\java learning\\core java volume 1\\Chapter5Inheritance","type":"PROJECT","hints":{"PROJECT_NAME":"Chapter5Inheritance"}},"ABSENT"]]
